metadata: Include headers for device number functionality

The implicit sys/sysmacros.h (resp. sys/mkdev.h) includes via sys/types.h
is being deprecated. Use AC_HEADER_MAJOR and include necessary header
files for major(), minor(), and makedev() functions.

https://bugzilla.gnome.org/show_bug.cgi?id=776213